[project]
name = "nano_dev_utils"
version = "0.5.1"

authors = [
  { name="Yaron Dayan", email="yaronday77@gmail.com" },
]
description = "A collection of small Python utilities for developers."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://github.com/yaronday/nano_utils"
Issues = "https://github.com/yaronday/nano_utils/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


